<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="list_name">List name: </string>
    <string name="list_name2">List name</string>
    <string name="product_name">Product name: </string>
    <string name="product_name2">Product name</string>
    <string name="quantity">Quantity: </string>
    <string name="price">Price: </string>
    <string name="price_0_00">0.00</string>
    <string name="total_cost">Total cost: </string> 
	<string name="delete">Delete</string>
	<string name="search">Search</string>
	<string name="items">Items</string>
	<string name="estimated_price">Estimated price</string>
	<string name="product">Product</string>
	<string name="qty">Qty</string>
	<string name="price2">Price</string>
	<string name="total_sum">Total sum</string>
	<string name="zero">0</string>
	<string name="price_zero">0.00</string>
	<string name="new1">New</string>
	<string name="save">Save</string>

</resources>