<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="horizontal" >
        <TextView
	        android:id="@+id/tvEditList"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/list_name" />
	
	    <EditText
	        android:id="@+id/etEditList"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/list_name2"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>
	</LinearLayout>

    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="vertical" >

		<Button
		    android:id="@+id/btDeleteList"
		    android:layout_width="200dip"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="30dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:text="@string/delete"
		    android:textColor="@color/white" />

	</LinearLayout>
		
</LinearLayout>